--- a/report/papers/paper-severe-gamm.Rmd
+++ b/report/papers/paper-severe-gamm.Rmd
@@ -435,8 +435,9 @@ gam.y.severe <- gamm(severe~s(pop)+s(green)+car
                    +heating+coast+lat,
                    data=dat.sel.y.severe,
                    family = "poisson", method = "REML")
-#gam.y.severe$aic;BIC(gam.y.severe)
+AIC(gam.y.severe$lme);BIC(gam.y.severe$lme)
 #summary(gam.y.severe)
+#gam与gamm的运算结果系数略有差异，最终结果以gamm为主
 gam.y.severe.coef <- summary(gam.y.severe$lme)$tTable[-(8:11),-3]
 
 dimnames(gam.y.severe.coef) <- list(c("截距项", varselname[c(3:5,8:10)]), c("估计值", "标准误", "t值", "P值"))
@@ -646,32 +647,29 @@ knitr::kable(yearly, row.names =F, align = c("l", "c", "c", "c"),
 根据表 \@ref(tab:tab-severe-y-huizong) 结果可知，在泊松回归模型中，显著的变量有常住人口、建成
 区绿化覆盖率、私人汽车拥有量、平均相对湿度、平均风速、日照时数、供暖、临海；在泊松混合效应模
 型中，显著的变量有常住人口、降水量、平均风速、日照时数、纬度；在泊松可加模型中，显著的变量有
-降水量、临海、纬度、常住人口、建成区绿化覆盖率、平均风速、日照时数；在泊松可加混合效应模型中，
+降水量、供暖、临海、纬度、建成区绿化覆盖率、平均风速、日照时数；在泊松可加混合效应模型中，
 显著的变量有降水量、临海、纬度、常住人口、建成区绿化覆盖率、平均风速、日照时数。从模型拟合
-优度来看，泊松可加模型效果最好，其AIC值最小，为476.7404，且临海地区的空气严重污染天数小于内陆
-地区的严重污染天数，与文章前面的t检验结果一致。但在泊松可加模型中，部分线性自变量未通过显著性
-检验，可以将其删掉，重新建立年度空气严重污染天数泊松可加模型。
+优度来看，泊松混合效应模型效果最好，其AIC值最小，为534.3405。接下来去掉泊松混合效应中不显著的
+变量，重新构建新的模型。
 
-以年度空气严重污染天数为因变量，降水量、平均风速、是否供暖、是否临海、纬度、
-常住人口、日照时数为自变量建立泊松可加模型，模型估计的参数部分结果显示在表
-\@ref(tab:tab-excel-gam-y-best) 中，非参数项的曲线显示在图
-\@ref(fig:fig-excel-gam-y-best) 中，非参数项显著性检验结果在表
-\@ref(tab:tab-excel-gam-y-smooth-best) 中。
+以年度空气严重污染天数为因变量，常住人口、降水量、平均风速、日照时数、纬度为自变量建立泊松混合
+效应模型，模型估计的参数部分结果显示在表
+\@ref(tab:tab-excel-gam-y-best) 中。
 
 
 ```{r tab-severe-gam-y-best, eval=T, results='markup'}
 
 library(mgcv)
-gam.y.severe.best <- gam(severe~s(pop)
-                    +rain+wind_speed+s(sun)
-                   +heating+coast+lat,
-                   data=dat.sel.y.severe,
-                   family = "poisson", method = "REML")
+gam.y.severe.best <- gamm(severe~pop
+                    +rain+wind_speed+sun
+                   +lat,
+                   random=list(city=~1), data=dat.sel.y.severe,
+                   family="poisson", method = "REML")
 
 
-gam.y.severe.best.coef <- summary(gam.y.severe.best)$p.table
+gam.y.severe.best.coef <- summary(gam.y.severe.best$lme)$tTable[,-3]
 
-dimnames(gam.y.severe.best.coef) <- list(c("截距项", varselname[c(4,6,8:10)]), c("估计值", "标准误", "t值", "P值"))
+dimnames(gam.y.severe.best.coef) <- list(c("截距项", varselname[c(1,4,6,7,10)]), c("估计值", "标准误", "t值", "P值"))
 
 library("kableExtra")
 knitr::kable(gam.y.severe.best.coef, row.names =T, align = c("r", "r", "r", "r"),
@@ -686,57 +684,10 @@ knitr::kable(gam.y.severe.best.coef, row.names =T, align = c("r", "r", "r", "r")
 ```
 
 由表 \@ref(tab:tab-severe-gam-y-best) 可知，在10%的显著性水平下，降水量、平均风
-速、是否供暖、是否临海、纬度均通过显著性检验，且参数项系数分别为-0.0011、-0.8767、
-1.3932、-1.2146、0.0794。表明在其他条件不变的情况下，纬度越高的地区，年度空气严
-重污染天数越多，空气质量越差；且供暖区域比非供暖区域空气质量差。而降水量越多、平
-均风速越大、临海地区，年度空气严重污染天数越少，空气质量越好。
-
-图 \@ref(fig:fig-severe-gam-y-best) 表明了常住人口、日照时数的非参数曲线，且从表
-\@ref(tab:tab-severe-gam-y-smooth-best) 中可以看出，在10%的显著性水平下，常住人
-口、日照时数对年度空气严重污染天数有非线性影响。且从图
-\@ref(fig:fig-severe-gam-y-best) 中可以看出，年度空气严重污染天数随常住人口和日
-照时数的增加均呈先上升后下降的趋势。
-
-```{r fig-severe-gam-y-best, eval=T, fig.height=3.0, fig.width=6.5,out.width="95%", fig.pos="H", fig.cap = "年度空气严重污 染天数最优模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
-par(mfrow = c(1,2))
-par(mar=c(5,4,2,1))
-par(cex.lab = 0.9)
-plot.gam(gam.y.severe.best,
-         select=1,
-         col="blue",
-         shade=T,
-         shade.col="grey",
-         ylab="severe",xlab = "常住人口数"
-         )
-
-par(mar=c(5,4,2,1))
-plot.gam(gam.y.severe.best,
-         select=2,
-         col="blue",
-         shade=T,
-         shade.col="grey",
-         ylab="severe",xlab = "日照时数"
-         )
-
-```
-
-```{r tab-severe-gam-y-smooth-best, eval=T, results='markup'}
-gam.smooth.tab.y.severe <- as.data.frame(summary(gam.y.severe.best)$s.table[,-2])
-
-dimnames(gam.smooth.tab.y.severe) <- list(varselname[c(1,7)], c("经验自由度", "F统计量值", "P值"))
-
-library("kableExtra")
-knitr::kable(gam.smooth.tab.y.severe, row.names =T, align = c("c", "c", "c", "c"),
-             caption="年度空气严重污染天数最优模型非参数项显著性",digits = 4,
-             longtable = TRUE, booktabs = TRUE, escape = F) %>%
-    kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
-                  ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
-                  repeat_header_text = "(续)")%>%
-    kable_styling(full_width = T) %>%
-    column_spec(1, width = c("4.5cm"))
-
-```
-
+速、日照时数、纬度均通过显著性检验，且参数项系数分别为-0.0012、-0.9639、
+-0.0010、0.2252。表明在其他条件不变的情况下，纬度越高的地区，年度空气严
+重污染天数越多，空气质量越差。而降水量越多、平
+均风速越大、日照时间越长，年度空气严重污染天数越少，空气质量越好。
 
 # 月度是否出现空气严重污染影响因素研究
 
@@ -904,10 +855,10 @@ gam.m.severe <- gamm(severe~s(pop)+car
                    +heating+coast+s(lat),
                    data=dat.sel.m.severe,
                    family = binomial, method = "REML")
-summary(gam.m.severe)
+#summary(gam.m.severe)
 #gam.m.severe$aic;BIC(gam.m.severe)
 gam.m.severe.coef <- summary(gam.m.severe$lme)$tTable[-(9:11),-3]
-
+#AIC(gam.m.severe$lme);BIC(gam.m.severe$lme)
 dimnames(gam.m.severe.coef) <- list(c("截距项", varselname[-c(1,3,10)]), c("估计值", "标准误", "t值", "P值"))
 #write.csv(gam.m.severe.coef,"C:/Users/Administrator/Desktop/gam.m.severe.coef.csv")
 library("kableExtra")
@@ -1096,20 +1047,22 @@ knitr::kable(month, row.names =F, align = c("c", "c", "c", "c"),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
     column_spec(1, width = c("4.5cm"))
+
+
 ```
 
 根据以上分析结果可知，在Logistic回归
 模型中，显著的变量有常住人口、私人汽车拥有量、平均气温、降水量、平均相对湿度、平
 均风速、日照时数、纬度；在Logistic混合效应模型中，显著的变量有私人汽车拥有量、平
 均气温、降水量、平均相对湿度、平均风速、日照时数、纬度；在Logistic可加模型中，显
-著的变量有私人汽车拥有量、降水量、平均相对湿度、平均风速、日照时数、常住人口、平
+著的变量有降水量、平均相对湿度、平均风速、日照时数、常住人口、平
 均气温、纬度；在Logistic可加混合效应模型中，显著的变量有降水量、平均相对湿度、平
 均风速、日照时数、纬度。通过比较以上模型的AIC值和模型的实际意义，本文选择Logistic
-可加模型作为最优模型，其AIC值最小，为753.2231。但在上面估计的Logistic可加模型中，
-是否供暖和是否临海两个自变量未通过显著性检验，因此将其删除并重新建立Logistic可加模型。
+回归模型作为最优模型，其AIC值最小，为787.2738。但在上面估计的Logistic回归模型中，
+是否供暖和是否临海两个自变量未通过显著性检验，因此将其删除并重新建立Logistic回归模型。
 
-以月度是否出现严重污染为因变量，私人汽车拥有量、降水量、平均相对湿度、平均风速、
-日照时数、常住人口、平均气温、纬度为自变量，建立Logistic可加模型，模型估计结果中
+以月度是否出现严重污染为因变量，常住人口、私人汽车拥有量、平均气温、降水量、平均相对湿度、平
+均风速、日照时数、纬度为自变量，建立Logistic回归模型，模型估计结果中
 参数部分结果显示在表 \@ref(tab:tab-severe-gam-m-best) 中，非参数项的曲线显示在图
 \@ref(fig:fig-severe-gam-m-best) 中，非参数项显著性检验结果在表
 \@ref(tab:tab-severe-gam-m-smooth-best) 中。
@@ -1117,16 +1070,15 @@ knitr::kable(month, row.names =F, align = c("c", "c", "c", "c"),
 ```{r tab-severe-gam-m-best, eval=T, results='markup'}
 
 library(mgcv)
-gam.m.severe.best <- gam(severe~s(pop)+car
-                   +s(mean_temp)+rain+humid+wind_speed+sun
-                  +s(lat),
+gam.m.severe.best <- glm(severe~pop+car
+                   +mean_temp+rain+humid+wind_speed+sun
+                   +lat,
                    data=dat.sel.m.severe,
-                   family = "binomial", method = "REML")
+                   family = binomial)
 
+gam.m.severe.best.coef <- summary(gam.m.severe.best)$coef
 
-gam.m.severe.best.coef <- summary(gam.m.severe.best)$p.table
-
-dimnames(gam.m.severe.best.coef) <- list(c("截距项", varselname[-c(1,3,8:10)]), c("估计值", "标准误", "t值", "P值"))
+dimnames(gam.m.severe.best.coef) <- list(c("截距项", varselname[-c(8,9)]), c("估计值", "标准误", "t值", "P值"))
 
 library("kableExtra")
 knitr::kable(gam.m.severe.best.coef, row.names =T, align = c("r", "r", "r", "r"),
@@ -1137,26 +1089,22 @@ knitr::kable(gam.m.severe.best.coef, row.names =T, align = c("r", "r", "r", "r")
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
     column_spec(1, width = c("4.5cm"))
-
 ```
 
 
-由表 \@ref(tab:tab-severe-gam-m-best) 可知，在10%的显著性水平下，私人汽车拥有量，
-降水量、平均相对湿度、平均风速、日照时数均通过显著性检验，且其系数均为负，表明在
-其他条件不变的情况下，私人汽车拥有量越大，降水量越大、平均相对湿度越大、平均风速
+由表 \@ref(tab:tab-severe-gam-m-best) 可知，在10%的显著性水平下，常住人口、私人汽车拥有量，平均气温
+降水量、平均相对湿度、平均风速、日照时数、维度均通过显著性检验，表明在
+其他条件不变的情况下，私人汽车拥有量越大，纬度越高，月度出现严重污染的概率越大，常住人口、平均气温、降水量越大、平均相对湿度越大、平均风速
 越大、日照时数越长，月度出现严重污染的概率越小。
 
 同时各项参数的符号与实际意义也相符。结合相关领域知识可以知道，当气温较高时，大气处
 于不稳定状态，在热力对流的作用下污染物向上扩散，空气质量就会变好；反之，当气温较低
 时，大气变得稳定，污染物的扩散受到抑制作用，空气质量就会变差。这与最优模型的研究结
-果保持一致。并且当低压控制时，大气处于中性或不稳定状态，近地面的污染物会随空气上升
-到高空，有利于近地面污染物向高空扩散；当高压控制时，空气作下沉运动，阻止污染物的向上
-扩散。所以气压越高，越不利于优良空气质量的发展。而风速越大在一定程度内有利于空气污
+果保持一致。而风速越大在一定程度内有利于空气污
 染物的扩散和稀释，空气质量越优。同样，增加降水量和湿度均对空气有净化作用，空气质量越好。
-而模型结果中私人汽车拥有量未对月度严重污染的概率造成影响很有可能是限号等相关交通
-政策实施和近年来清洁能源发展的结果，致使私人汽车拥有量的增加没有导致严重污染天数增加。
+模型结果中私人汽车拥有量对月度严重污染的概率造成正向影响也符合实际情况。
 
-```{r fig-severe-gam-m-best, eval=T, fig.height=5.5, fig.width=6.5,out.width="95%", fig.pos="H", fig.cap = "月度是否出现空气严重污染最优模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
+```{r fig-severe-gam-m-best, eval=FALSE, fig.cap="月度是否出现空气严重污染最优模型非参数曲线", fig.height=5.5, fig.pos="H", fig.width=6.5, dev=c("png","cairo_pdf"), dev.args=list(family="Microsoft YaHei UI Light"), include=FALSE, list(family="Microsoft, out.width="95%"}
 par(mfrow = c(2,2))
 par(mar=c(5,4,2,1))
 plot.gam(gam.m.severe.best,
@@ -1184,7 +1132,7 @@ plot.gam(gam.m.severe.best,
          )
 ```
 
-```{r tab-severe-gam-m-smooth-best, eval=T, results='markup'}
+```{r tab-severe-gam-m-smooth-best, eval=FALSE, include=FALSE, results='markup'}
 gam.smooth.tab.m.severe <- as.data.frame(summary(gam.m.severe.best)$s.table[,-2])
 
 dimnames(gam.smooth.tab.m.severe) <- list(varselname[c(1,3,10)], c("经验自由度", "F统计量值", "P值"))
