--- a/report/papers/paper-aqi-gamm.Rmd
+++ b/report/papers/paper-aqi-gamm.Rmd
@@ -55,6 +55,17 @@ Sys.setlocale("LC_ALL", "Chinese")
 - [ ] 半参数可加混合模型简介
 - [ ] 两个汇总系数表中模型I，II，III，IV 对应的具体模型
 - [ ] 两个汇总系数表下面注明显著性符号
+# 摘要
+
+本文以2014-2017年中国重点监测的35个城市的年度和月度空气质量指数为研究对象，利用半参数
+混合效应模型对城市空气质量的影响因素进行研究。该模型综合考虑了自变量对因变量的线性和非
+线性固定效应以及描述观测值数据相关性的随机效应。研究结果显示，对于年均AQI，社会经济因素
+中的废气治理完成投资额是正的线性影响，固定资产投资和汽车拥有量是非线性关系；气候因素中
+的平均风速是线性关系，平均气温具有非线性关系;是否临海，是否供暖和纬度三个地理
+因素对年均AQI有线性影响。对于月均AQI，社会经济方面的三个影响因素废气治理完成投资额，房屋建
+筑施工面积和汽车拥有量均为线性影响；平均气温，降水量，平均风速和平均气
+压这四个气象变量对月均AQI均有显著的线性影响；地理因素中的是否临海，是否供暖是线性影响，
+纬度对月均AQI有显著的非线性影响。
 
 # 简介
 
@@ -91,10 +102,27 @@ Zheng,2017,李健、靳泽凡、苑清敏，2019）[@zanin2012assessing;@zheng20
 
 **半参数混合效应模型简介**
 
-文章以下部分的结构为：第二部分说明了变量选择和数据来源，给出了数据处理过程；第三
-部分在使用Lasso方法选择自变量的基础上，以年度平均AQI为因变量建立了半参数混合模型
-的几种具体模型，通过模型比较给出了最优模型并进行解释分析得到影响因素。第四部分对
-月度平均AQI作了类似的分析得到月度空气质量因素因素。最后部分是结论。
+在实际建模过程中自变量与因变量的关系并不都是非线性关系，最具灵活性的模型应是在同
+一个模型中既包含参数项又包含非参数项，模型的参数部分还允许像哑变量或定序变量的离散
+变量与参数项一起建模，当包含离散变量，便可以研究分组数据。但经典的线性假设认为观测
+值来自一个独立的总体，即是独立同分布的，对于一般的分组数据，其组内观测值是相关的，
+因为他们属于相同的子总体，而组间是独立的。为此，综合考虑混合效应使用半参数混合
+效应模型，该模型中的混合效应是分析分组数据的灵活工具，纵向数据、重复观测数据、多水
+平数据、层次数据等都属于分组数据，混合效应通过复杂的方差结构可以对分组数据中存在的
+组内相关进行建模，同时，还可以拟合异方差数据。一般地，半参数混合模型具有以下形式
+
+$$y_{i}=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_{2i})
+  + \cdots + \boldsymbol{Z_{i}b} + \varepsilon_{i}$${#eq:additive-mixed}
+  
+其中 $y_{i}$ 是因变量， $\boldsymbol{\beta}$ 是固定效应参数向量，
+ $\boldsymbol{X_{i}}$ 是固定
+效应设计矩阵， $f_{j}$ 是自变量 $x_{k}$ 的光滑函数， $\boldsymbol{Z_{i}}$ 是随机效应
+的设计矩阵， $\boldsymbol{b \sim \mathcal{N} (0, \Psi)}$ 是随机效应变量，其中方差
+协方差阵 $\boldsymbol{\Psi}$ 一般未知而需要估计， $\boldsymbol{\varepsilon \sim \mathcal{N}(0,\Lambda)}$ 是误差向量，其由 $\varepsilon_{i}$ 堆积而成，一般假设其方差
+协方差矩阵具有比较简单的形式。
+
+在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，允许自变量与因变量的关系
+存在多种形式，而随机效应用来拟合观测值之间的相关关系和数据的异质性。
 
 # 变量选择和数据来源
 
@@ -246,7 +274,7 @@ mapply(function(i, y) {
 使用Lasso方法得到的模型参数估计值是有偏，下面对基于Lasso方法筛选出的变量重新进行
 模型拟合。根据年度空气质量指数AQI服从正态分布的数据特征，且遵循模型由简单到复杂
 的原则，对服从正态分布的年均AQI建立普通线性回归模型，进一步分别考虑空气质量城市
-之间的相关性及自变量对空气质量的非线性影响，分别建立线性混合模型及半参数混合模型；
+之间的相关性及自变量对空气质量的非线性影响，分别建立线性混合模型及半参数模型；
 最后综合考虑城市之间的相关性及自变量的非线性影响，建立半参数混合效应模型。并在这
 些可选模型中通过综合比较模型拟合优度，模型实际意义等确定最优模型。
 
@@ -605,27 +633,30 @@ library("kableExtra")
 knitr::kable(yearly, row.names =F, align = c("l", "c", "c", "c"),
              caption="年度平均空气质量指数模型汇总表",digits = 4,
              longtable = TRUE, booktabs = TRUE, escape = F) %>%
+    kable_styling(full_width = T) %>%
     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
-    kable_styling(full_width = T) %>%
-    column_spec(1, width = c("4.5cm"))
+    column_spec(1, width = c("4.5cm"))%>%
+    footnote(general ="注:数字后面的***表示p<0.001,**表示p<0.01,*表示p<0.05,.表示p<0.1",
+             general_title = "注:",
+             threeparttable = T)
 
 ```
 
-根据表 \@ref(tab:tab-aqi-y-huizong) 可知，在线性回归模型中，显著的变量有废气治理
+根据表 \@ref(tab:tab-aqi-y-huizong) 可知，在线性回归模型(模型I)中，显著的变量有废气治理
 完成投资额、平均风速、是否供暖、是否临海、纬度，模型的AIC、BIC值分别为1089.159、
-1127.4；在线性混合效应模型中，显著的变量有私人汽车拥有量、废气治理完成投资额、降
+1127.4；在线性混合效应模型(模型II)中，显著的变量有私人汽车拥有量、废气治理完成投资额、降
 水量、平均风速、平均气压、是否临海，AIC、BIC值分别为1064.311、1104.24；在半参数
-回归模型中，显著的变量有废气治理完成投资额、平均风速、是否供暖、是否临海、纬度、
-固定资产投资、平均气温，AIC、BIC值分别为1049.803、1107.445；在半参数混合效应模型
+回归模型(模型III)中，显著的变量有废气治理完成投资额、平均风速、是否供暖、是否临海、纬度、
+固定资产投资，AIC、BIC值分别为1049.803、1107.445；在半参数混合效应模型(模型IV)
 中，显著的变量有废气治理完成投资额、平均相对湿度、平均风速、平均气压、是否临海、
-私人汽车拥有量、平均气温，AIC、BIC值分别为1019.786，1068.271。根据以上结果，从
-AIC、BIC值可以看出半参数混合效应模型最好，但是在半参数混合效应模型中，私人汽车拥
+私人汽车拥有量，AIC、BIC值分别为1019.786，1068.271。根据以上结果，从
+AIC、BIC值可以看出半参数混合效应模型(模型IV)最好，但是在半参数混合效应模型(模型IV)中，私人汽车拥
 有量与年均AQI之间具有负相关关系，这与理论分析不一致，此外非参数项固定资产投资额
-也未通过显著性检验。综合考虑，这里选择半参数回归模型作为年均AQI的最优模型。
+也未通过显著性检验。综合考虑，这里选择半参数回归模型(模型III)作为年均AQI的最优模型。
 
-上面建立的半参数回归模型中，部分变量未通过显著性检验，因此需要进一步调整。经过反
+上面建立的半参数回归模型(模型III)中，部分变量未通过显著性检验，因此需要进一步调整。经过反
 复调试，最后的模型为以年均AQI为因变量，废气治理完成投资额、平均风速、是否供暖、
 是否临海、纬度、固定资产投资、汽车拥有量、平均气温为自变量建立半参数回归模型，线
 性部分结果如表 \@ref(tab:tab-gam-y-best) 所示， 非参数项曲线在图
@@ -1163,24 +1194,27 @@ knitr::kable(monthly, row.names =F, align = c("l", "c", "c", "c"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
-    column_spec(1, width = c("4.5cm"))
+    column_spec(1, width = c("4.5cm")) %>%
+    footnote(general ="数字后面的***表示p<0.001,**表示p<0.01,*表示p<0.05,.表示p<0.1",
+             general_title = "注:",
+            )
 
 ```
 
-由表 \@ref(tab:tab-aqi-m-huizong) 结果可知，在线性回归模型中，显著的变量有房屋建
+由表 \@ref(tab:tab-aqi-m-huizong) 结果可知，在线性回归模型(模型I)中，显著的变量有房屋建
 筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均
 气压、供暖、临海、纬度，模型的AIC、BIC值分别为-188.7762、-188.2311；在线性混合效
-应模型中，显著的变量有房屋建筑施工面积、私人汽车拥有量、平均气温、降水量、平均风
+应模型(模型II)中，显著的变量有房屋建筑施工面积、私人汽车拥有量、平均气温、降水量、平均风
 速、平均气压、是否临海、纬度，AIC、BIC值分别为-374.5774、-298.7061；在半参数回归
-模型中，显著的变量有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气
-温、降水量、平均风速、平均气压、是否供暖、是否临海，AIC、BIC值分别
-为-376.7166、-290.7551；在半参数混合效应模型中，显著的变量有房屋建筑施工面积、私
-人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、
-是否临海，AIC、BIC值分别为-391.865，-310.5743。根据以上结果，从AIC、BIC值可以看
-出半参数混合效应模型最好。但在半参数混合模型中，重要影响因素是否供暖未通过显著性
+模型(模型III)中，显著的变量有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气
+温、降水量、平均风速、平均气压、是否供暖、是否临海、纬度，AIC、BIC值分别
+为-376.7166、-290.7551；在半参数混合效应模型(模型IV)中，显著的变量有房屋建筑施工面积、私
+人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否临海、
+纬度，AIC、BIC值分别为-391.865，-310.5743。根据以上结果，从AIC、BIC值可以看
+出半参数混合效应模型最好。但在半参数混合模型(模型IV)中，重要影响因素是否供暖未通过显著性
 检验，且私人汽车拥有量的估计系数为负，即私人汽车拥有量约高，月均AQI越小，这与实
-际不符。这些问题在半参数回归模型中不存在，因此我们选择AIC，BIC次优的半参数回归模
-型作为最优模型。
+际不符。这些问题在半参数回归模型(模型III)中不存在，因此本文选择AIC，BIC次优的半参数回归模
+型(模型III)作为最优模型。
 
 在半参数回归模型中，日照时数未通过显著性检验，因此再次以对数月均AQI为因变量，房
 屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、
