--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -613,19 +613,22 @@ knitr::kable(yearly, row.names =F, align = c("l", "c", "c", "c"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
-    column_spec(1, width = c("4.5cm"))
+    column_spec(1, width = c("4.5cm")) %>%
+    footnote(general ="数字后面的***表示p<0.001,**表示p<0.01,*表示p<0.05,.表示p<0.1",
+             general_title = "注:",
+             threeparttable = T)
 
 ```
 
 上述分析中，选取对数化的年均空气质量为优天数作为因变量，基于Lasso筛选出的变量为自变量，
-分别建立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空气
-质量的影响因素进行分析。根据以上分析结果可知，在线性回归模型中，显著的变量有废气
-治理完成投资额、平均风速、是否临海、纬度；在线性混合效应模型中，显著的变量有废气
-治理完成投资额、平均风速；在半参数回归模型和半参数混合效应模型中，显著的变量均为
+分别建立线性回归模型(模型I)、线性混合效应模型(模型II)、半参数回归模型(模型III)和半参数混合效应模型(模型IV)对空气
+质量的影响因素进行分析。根据以上分析结果可知，在线性回归模型(模型I)中，显著的变量有废气
+治理完成投资额、平均风速、是否临海、纬度；在线性混合效应模型(模型II)中，显著的变量有废气
+治理完成投资额、平均风速；在半参数回归模型(模型III)和半参数混合效应模型(模型IV)中，显著的变量均为
 全社会用电量、废气治理完成投资额、平均相对湿度、平均风速、地区生产总值、纬度。同时，
 模型结果显示除线性回归中临海地区的空气质量为优天数明显大于内陆地区以外，其余各个模型均表明
 是否供暖和是否临海两个地理因素对空气质量为优天数的影响并不显著。根据
-各个模型的AIC、BIC值可以发现半参数回归模型最好，其AIC和BIC值最小，分别为306.4200 
+各个模型的AIC、BIC值可以发现半参数回归模型(模型III)最好，其AIC和BIC值最小，分别为306.4200 
 和364.4073，但是从模型变量来讲，结合之前的变量筛选结果，这些模型尚未很好地表明变量与年
 均空气质量为优天数之间的关系。
 
@@ -909,7 +912,6 @@ knitr::kable(lme.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
     column_spec(1, width = c("4.5cm"))
-
 ```
 
 ## 月度空气质量为优天数泊松可加模型
@@ -1089,22 +1091,25 @@ knitr::kable(monthly, row.names =F, align = c("l", "c", "c", "c"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
-    column_spec(1, width = c("4.5cm"))
+    column_spec(1, width = c("4.5cm"))%>%
+    footnote(general ="数字后面的***表示p<0.001,**表示p<0.01,*表示p<0.05,.表示p<0.1",
+             general_title = "注:",
+             threeparttable = T)
 
 ```
 
 上述分析中，我们选取月均空气质量为优天数作为因变量，基于Lasso筛选出的变量为自变
-量，分别建立泊松回归模型、泊松混合效应模型、泊松可加模型和泊松可加混合效应模型对
-空气质量为优天数的影响因素进行分析。根据以上分析结果可知，在泊松回归模型中，显著
+量，分别建立泊松回归模型(模型I)、泊松混合效应模型(模型II)、泊松可加模型(模型III)和泊松可加混合效应模型(模型IV)对
+空气质量为优天数的影响因素进行分析。根据以上分析结果可知，在泊松回归模型(模型I)中，显著
 的变量有房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、平均相对湿度、平
-均风速、是否供暖、是否临海、纬度；在泊松混合效应模型中，显著的变量有房屋建筑施工
+均风速、是否供暖、是否临海、纬度；在泊松混合效应模型(模型II)中，显著的变量有房屋建筑施工
 面积、废气治理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖、纬
-度；在泊松可加模型中，显著的变量有房屋建筑施工面积、废气治理完成投资额、平均气温、
-降水量、平均相对湿度、平均风速、是否供暖、纬度；在泊松可加混合效应模型中，显著的
+度；在泊松可加模型(模型III)中，显著的变量有房屋建筑施工面积、废气治理完成投资额、平均气温、
+降水量、平均相对湿度、平均风速、是否供暖、纬度；在泊松可加混合效应模型(模型IV)中，显著的
 变量有房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、平均相对湿度、平均
 风速、是否供暖、纬度。根据以上结果，结合之前的分析及我们的预期，这些模型尚未很好
 地表明变量与月均空气质量为优天数之间的关系。综合考虑模型的拟合优度及模型的实际意
-义，泊松可加模型对于月度空气质量为优天数的拟合最好。但在上面建立的泊松可加模型中，
+义，泊松可加模型(模型III)对于月度空气质量为优天数的拟合最好。但在上面建立的泊松可加模型(模型III)中，
 自变量是否临海不显著，故剔除之重新建立泊松可加混合模型作为最优模型。也即以月均空
 气质量为优天数为因变量，房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、
 平均相对湿度、平均风速、是否供暖、纬度为自变量建立泊松可加模型。最优模型估计结果
